# Pega2EC

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: admin_verifications.py  health.py  meta.py  registrations.py
backend/app/core/: __init__.py  config.py  dependencies.py  errors.py
backend/app/models/: __init__.py
backend/app/schemas/: common.py  meta.py  registration.py
backend/app/services/: __init__.py  providers.py  registration.py  supabase_admin.py
backend/pega2ec_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py  test_registration_service.py
docs/: architecture.md  data-model-mvp.md  legal-consent-draft.md  mvp-overview.md
frontend/: Dockerfile  README.md  pubspec.yaml
frontend/lib/src/app/: app.dart
frontend/lib/src/core/config/: app_config.dart
frontend/lib/src/core/theme/: app_theme.dart
frontend/lib/src/features/landing/presentation/pages/: landing_page.dart
frontend/lib/src/features/landing/presentation/widgets/: highlight_card.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
supabase/: README.md
supabase/migrations/: 20260418111000_initial_core_schema.sql  20260418114000_monetization_and_audit.sql  20260418121000_chat_and_moderation.sql  20260418124000_seed_ecuador_locations.sql  20260418130000_seed_app_settings.sql  20260418133000_initial_rls_policies.sql
